scrollbar fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,44 @@
 @tailwind components;
 @tailwind utilities;
 
+
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+body {
+  font-family: "Teko", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+
+
+
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #7c3aed; /* Violet color */
+  border-radius: 10px;
+  border: 3px solid #f1f1f1;
+}
+
+/* For Firefox */
+html {
+  scrollbar-width: thin;
+  scrollbar-color: #7c3aed #b50bf9;
+}
+
+
+
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -67,3 +105,6 @@
     @apply bg-background text-foreground;
   }
 }
+
+
+
